Crash by cyclic use of Boolean Modifier #32866

Closed
opened 2012-10-13 04:50:06 +02:00 by Shinsuke Irie · 7 comments
Member

%%%Steps to reproduce:

  1. Create 2 cubes (cube1, cube2)
  2. Add boolean modifier to cube1 and set Object=cube2
  3. Add boolean modifier to cube2 and set Object=cube1

Then Blender crashes immediately outputting the following message:

Dependency cycle detected:

cube1 depends on cube2 through Boolean Modifier.
cube2 depends on cube1 through Boolean Modifier.

Segmentation fault (core dumped)
$

Such use of the modifier makes no sense, but we might do that accidentally and lose our data unexpectedly.

r51289
Ubuntu 12.10 amd64
%%%

%%%Steps to reproduce: 1. Create 2 cubes (cube1, cube2) 2. Add boolean modifier to cube1 and set Object=cube2 3. Add boolean modifier to cube2 and set Object=cube1 Then Blender crashes immediately outputting the following message: Dependency cycle detected: ``` cube1 depends on cube2 through Boolean Modifier. cube2 depends on cube1 through Boolean Modifier. ``` Segmentation fault (core dumped) $ Such use of the modifier makes no sense, but we might do that accidentally and lose our data unexpectedly. r51289 Ubuntu 12.10 amd64 %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%We just run into an infinite loop, as boolean modifier expects the final mesh (i.e. with all modifiers applied) of its second operand…

Not sure though how to nicely fix that, perhaps returning to 2.63 code in applyModifer when getting second operand's dm (it indeed fixes the crash)? Or placing a sort of "watchdog" to prevent recursion?

Will leave this one to sergey! :)%%%

%%%We just run into an infinite loop, as boolean modifier expects the final mesh (i.e. with all modifiers applied) of its second operand… Not sure though how to nicely fix that, perhaps returning to 2.63 code in applyModifer when getting second operand's dm (it indeed fixes the crash)? Or placing a sort of "watchdog" to prevent recursion? Will leave this one to sergey! :)%%%

%%%That was a change from Campbell to support some special cases when objects from different layers are used.

Campbell, this indeed should be solved in a different way. Could you look into this?

Side note: the same could happen with array modifier when recursion appears on Start/End cap objects.%%%

%%%That was a change from Campbell to support some special cases when objects from different layers are used. Campbell, this indeed should be solved in a different way. Could you look into this? Side note: the same could happen with array modifier when recursion appears on Start/End cap objects.%%%

%%%At some point I changed all modifiers to use only derivedFinal and just fail if it is not available. This reveals issues in our dependency graph of course, which may not be possible to fix without a major refactor.

If this is an important case to have working now, it could do some manual check for recursion, like a flag in the modifier that is set/cleared before/after running.%%%

%%%At some point I changed all modifiers to use only derivedFinal and just fail if it is not available. This reveals issues in our dependency graph of course, which may not be possible to fix without a major refactor. If this is an important case to have working now, it could do some manual check for recursion, like a flag in the modifier that is set/cleared before/after running.%%%

%%%IMO, Blender lacks of "solid" working modifiers for creating full range of modern particle and mesh FX. So by now I suppose it's really better to have some hacks (before that major refactor) for several modifiers than NOT to have them. Boolean is a very important modifier for creating complex effects without tricky workarounds.%%%

%%%IMO, Blender lacks of "solid" working modifiers for creating full range of modern particle and mesh FX. So by now I suppose it's really better to have some hacks (before that major refactor) for several modifiers than NOT to have them. Boolean is a very important modifier for creating complex effects without tricky workarounds.%%%

%%%Committed workaround r54017, but ideal but avoids crash.%%%

%%%Committed workaround r54017, but ideal but avoids crash.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32866
No description provided.